tests/sumo/errors/routes/stops/departPos_arrivalPos/errors.sumo
Warning: stop for vehicle 'departPosPastStop' on lane 'beg_0' is not downstream the current route.
